- Algoritmo de DFS para generación del laberinto - Algoritmo de BFS para la inteligencia artificial

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Cedric.cs" />
      <Compile Include="Assets\GenerateMaze.cs" />
      <Compile Include="Assets\controller.cs" />
  <Reference Include="UnityEngine.UI">
